--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ cffi==1.11.2
 click==6.7
 Flask==0.12.2
 Flask-Bcrypt==0.7.1
+Flask-Login==0.4.1
 Flask-Migrate==2.1.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
+Flask-Testing==0.6.2
 Flask-WTF==0.14.2
 gunicorn==19.7.1
 itsdangerous==0.24
