--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 alembic==0.9.6
 bcrypt==3.1.4
+blinker==1.4
 cffi==1.11.2
 click==6.7
 Flask==0.12.2
 Flask-Bcrypt==0.7.1
 Flask-Login==0.4.1
+Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
