--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ blinker==1.4
 cffi==1.11.2
 click==6.7
 Flask==0.12.2
+Flask-Admin==1.5.0
 Flask-Bcrypt==0.7.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
