--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask-Migrate==2.1.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-Testing==0.6.2
+Flask-Uploads==0.2.1
 Flask-WTF==0.14.2
 gunicorn==19.7.1
 itsdangerous==0.24
